Enhance popup1 styling with background and border
Added background color and border to popup1 class.

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -147,9 +147,13 @@ main p{
     justify-content: center;
     align-items: center;
     position: fixed;
+    background-color: gray;
+    border: 1px solid black;
+    border-radius: 10px;
 }
 
 .popup1 h2, .popup1, h4 {
     display: flex;
     justify-content: center;
 }
+
